# OpenGL-practice

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  debug.bat  download.bat  release.bat
python/ModernGL/: main.py
python/ModernGL test/: main.py
python/ModernGL test/programs/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.c  camera.h  ebo.h  inputs.h  main.c  main.cpp  object.h  pch.h  shader.h  state.h  texture.h  types.h  utils.c  utils.h  utils.hpp  vao.h  vbo.h  window.h
src/mesh/: ebo.c  ebo.h  fbo.c  fbo.h  framebuffer.c  framebuffer.h  model.c  model.h  object.c  object.h  rbo.c  rbo.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h
src/shaders/: asteroid.vert  blur.frag  frag.frag  framebuffer.frag  framebuffer.vert  grass.frag  light.frag  light.vert  main.frag  main.geom  main.vert  normals.frag  normals.geom  outline.frag  outline.vert  shadowCubeMap.frag  shadowCubeMap.geom  shadowCubeMap.vert  shadowMap.vert  skybox.frag  skybox.vert  vert.vert  windows.frag
